--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 ffn
 arch
-
-pandas~=1.2.2
-setuptools~=41.2.0
-numpy~=1.20.1
-matplotlib~=3.3.4
-torch~=1.11.0
-keras~=2.8.0
-scikit-learn~=1.0.2
+seaborn
+torch
+keras
+tensorflow
+sklearn
+pandas
+setuptools
+numpy
+matplotlib
+torch
+keras
+scikit-learn
