--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-ffn
-arch
+ffn~=0.3.6
+arch~=5.2.0
 
 pandas~=1.2.2
 setuptools~=41.2.0
@@ -8,3 +8,8 @@ matplotlib~=3.3.4
 torch~=1.11.0
 keras~=2.8.0
 scikit-learn~=1.0.2
+seaborn~=0.11.2
+tensorflow~=2.8.0
+plotly~=5.6.0
+ipython~=8.2.0
+scipy~=1.8.0
